# Jasmine

./: .gitattributes  AdBlockScript.h  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  Constants.cpp  Constants.h  Jasmine.desktop  README.md  RequestInterceptor.h  adfreeplayerdialog.cpp  adfreeplayerdialog.h  cosmeticfilterinjector.cpp  cosmeticfilterinjector.h  countrymapper.h  downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h  downloadwindow.cpp  downloadwindow.h  extensionmanager.cpp  extensionmanager.h  helpmenudialog.cpp  helpmenudialog.h  io.github.alamahant.Jasmine.desktop  io.github.alamahant.Jasmine.metainfo.xml  io.github.alamahant.Jasmine.yml  iptvchannel.h  main.cpp  mainwindow.cpp  mainwindow.h  mywebpage.cpp  mywebpage.h  podcast.h  radiobrowserapi.cpp  radiobrowserapi.h  radiostation.h  resources.qrc  searchiptvdialog.cpp  (+17 more)
qwebengine-bundle/cmake/Qt6WebEngineCore/: Qt6WebEngineCoreAdditionalTargetInfo.cmake  Qt6WebEngineCoreConfig.cmake  Qt6WebEngineCoreConfigVersion.cmake  Qt6WebEngineCoreDependencies.cmake  Qt6WebEngineCoreDeploySupport.cmake  Qt6WebEngineCoreMacros.cmake  Qt6WebEngineCoreTargets-relwithdebinfo.cmake  Qt6WebEngineCoreTargets.cmake  Qt6WebEngineCoreVersionlessAliasTargets.cmake  Qt6WebEngineCoreVersionlessTargets.cmake
qwebengine-bundle/cmake/Qt6WebEngineCoreTools/: Qt6WebEngineCoreToolsAdditionalTargetInfo.cmake  Qt6WebEngineCoreToolsConfig.cmake  Qt6WebEngineCoreToolsConfigVersion.cmake  Qt6WebEngineCoreToolsConfigVersionImpl.cmake  Qt6WebEngineCoreToolsDependencies.cmake  Qt6WebEngineCoreToolsTargets-relwithdebinfo.cmake  Qt6WebEngineCoreToolsTargets.cmake  Qt6WebEngineCoreToolsVersionlessTargets.cmake
qwebengine-bundle/cmake/Qt6WebEngineQuick/: Qt6WebEngineQuickAdditionalTargetInfo.cmake  Qt6WebEngineQuickConfig.cmake  Qt6WebEngineQuickConfigVersion.cmake  Qt6WebEngineQuickDependencies.cmake  Qt6WebEngineQuickTargets-relwithdebinfo.cmake  Qt6WebEngineQuickTargets.cmake  Qt6WebEngineQuickVersionlessAliasTargets.cmake  Qt6WebEngineQuickVersionlessTargets.cmake
qwebengine-bundle/cmake/Qt6WebEngineQuickDelegatesQml/: Qt6WebEngineQuickDelegatesQmlAdditionalTargetInfo.cmake  Qt6WebEngineQuickDelegatesQmlConfig.cmake  Qt6WebEngineQuickDelegatesQmlConfigVersion.cmake  Qt6WebEngineQuickDelegatesQmlTargets-relwithdebinfo.cmake  Qt6WebEngineQuickDelegatesQmlTargets.cmake  Qt6WebEngineQuickDelegatesQmlVersionlessAliasTargets.cmake  Qt6WebEngineQuickDelegatesQmlVersionlessTargets.cmake
qwebengine-bundle/cmake/Qt6WebEngineWidgets/: Qt6WebEngineWidgetsAdditionalTargetInfo.cmake  Qt6WebEngineWidgetsConfig.cmake  Qt6WebEngineWidgetsConfigVersion.cmake  Qt6WebEngineWidgetsConfigVersionImpl.cmake  Qt6WebEngineWidgetsDependencies.cmake  Qt6WebEngineWidgetsTargets-relwithdebinfo.cmake  Qt6WebEngineWidgetsTargets.cmake  Qt6WebEngineWidgetsVersionlessAliasTargets.cmake  Qt6WebEngineWidgetsVersionlessTargets.cmake
qwebengine-bundle/include/QtWebEngineCore/: QWebEngineCertificateError  QWebEngineClientCertificateSelection  QWebEngineClientCertificateStore  QWebEngineClientHints  QWebEngineContextMenuRequest  QWebEngineCookieStore  QWebEngineDesktopMediaRequest  QWebEngineDownloadRequest  QWebEngineFileSystemAccessRequest  QWebEngineFindTextResult  QWebEngineFrame  QWebEngineFullScreenRequest  QWebEngineGlobalSettings  QWebEngineHistoryItem  QWebEngineHttpRequest  QWebEngineLoadingInfo  QWebEngineNavigationRequest  QWebEngineNewWindowRequest  QWebEngineNotification  QWebEnginePage  QWebEnginePermission  QWebEngineProfile  QWebEngineQuotaRequest  QWebEngineRegisterProtocolHandlerRequest  QWebEngineScript  QWebEngineScriptCollection  QWebEngineSettings  QWebEngineUrlRequestInfo  QWebEngineUrlRequestInterceptor  QWebEngineUrlRequestJob  QWebEngineUrlScheme  QWebEngineUrlSchemeHandler  QWebEngineWebAuthUxRequest  QtWebEngineCore  QtWebEngineCoreDepends  QtWebEngineCoreVersion  qtwebenginecore-config.h  qtwebenginecoreglobal.h  qtwebenginecoreversion.h  qwebenginecertificateerror.h  (+32 more)
qwebengine-bundle/include/QtWebEngineQuick/: QQuickWebEngineDownloadRequest  QQuickWebEngineProfile  QtWebEngineQuick  QtWebEngineQuickDepends  QtWebEngineQuickVersion  qquickwebenginedownloadrequest.h  qquickwebengineprofile.h  qtwebenginequickglobal.h  qtwebenginequickversion.h
qwebengine-bundle/include/QtWebEngineWidgets/: QWebEngineView  QtWebEngineWidgets  QtWebEngineWidgetsDepends  QtWebEngineWidgetsVersion  qtwebenginewidgetsglobal.h  qtwebenginewidgetsversion.h  qwebengineview.h
qwebengine-bundle/lib/: libQt6WebEngineCore.prl  libQt6WebEngineQuick.prl  libQt6WebEngineQuick.so.6.8.0  libQt6WebEngineQuickDelegatesQml.prl  libQt6WebEngineWidgets.prl
qwebengine-bundle/libexec/: QtWebEngineProcess  qwebengine_convert_dict
qwebengine-bundle/resources/: qtwebengine_devtools_resources.pak  qtwebengine_resources.pak  qtwebengine_resources_100p.pak  qtwebengine_resources_200p.pak
qwebengine-bundles/cmake/Qt6WebEngineCore/: Qt6WebEngineCoreDependencies.cmake  Qt6WebEngineCoreTargets.cmake  Qt6WebEngineCoreVersionlessAliasTargets.cmake  Qt6WebEngineCoreVersionlessTargets.cmake
qwebengine-bundles/cmake/Qt6WebEngineQuick/: Qt6WebEngineQuickAdditionalTargetInfo.cmake  Qt6WebEngineQuickTargets-relwithdebinfo.cmake  Qt6WebEngineQuickTargets.cmake  Qt6WebEngineQuickVersionlessTargets.cmake
qwebengine-bundles/cmake/Qt6WebEngineQuickDelegatesQml/: Qt6WebEngineQuickDelegatesQmlConfig.cmake  Qt6WebEngineQuickDelegatesQmlVersionlessAliasTargets.cmake  Qt6WebEngineQuickDelegatesQmlVersionlessTargets.cmake
qwebengine-bundles/cmake/Qt6WebEngineWidgets/: Qt6WebEngineWidgetsAdditionalTargetInfo.cmake  Qt6WebEngineWidgetsConfig.cmake  Qt6WebEngineWidgetsTargets-relwithdebinfo.cmake  Qt6WebEngineWidgetsTargets.cmake  Qt6WebEngineWidgetsVersionlessTargets.cmake
qwebengine-bundles/lib/: libQt6WebEngineCore.so.6  libQt6WebEngineQuick.prl  libQt6WebEngineQuickDelegatesQml.so.6.8.0  libQt6WebEngineWidgets.prl  libQt6WebEngineWidgets.so.6
qwebengine-bundles/libexec/: QtWebEngineProcess
resources/: dark-theme.css  stylesheet.css
(+104 files in other folders)
